unpackaged/main/default/objects/Campaign__c/fields/Outbound_ANI_Campaign_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Outbound_ANI_Campaign_Identifier__c</fullName>
    <description>Outbound ANI Campaign Identifier - will be passed into the outgoing Assign ANI API Post if this field is not null and an Intake is associated with this campaign.</description>
    <inlineHelpText>Outbound ANI Campaign Identifier - will be passed into the outgoing Assign ANI API Post if this field is not null and an Intake is associated with this campaign.</inlineHelpText>
    <label>Five9 Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>