unpackaged/main/default/objects/Campaign__c/fields/Total_Campaign_Partners__c.field-meta.xml
<CustomField>
    <fullName>Total_Campaign_Partners__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Set by automation. Equals the total number of campaign partners related to this campaign.</description>
    <inlineHelpText>Set by automation. Equals the total number of campaign partners related to this campaign.</inlineHelpText>
    <label>Total Campaign Partners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>