unpackaged/main/default/objects/Campaign__c/fields/Total_Intakes__c.field-meta.xml
<CustomField>
    <fullName>Total_Intakes__c</fullName>
    <description>DLRS rollup of all Intakes where Campaign lookup equals this Campaign record.</description>
    <inlineHelpText>DLRS rollup of all Intakes where Campaign lookup equals this Campaign record.</inlineHelpText>
    <label>Total Intakes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>