unpackaged/main/default/objects/Campaign__c/fields/Total_Intakes_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Total_Intakes_Assigned__c</fullName>
    <description>DLRS Rollup of all Intakes Assigned fields on Campaign Partner records associated with this Campaign.</description>
    <inlineHelpText>DLRS Rollup of all Intakes Assigned fields on Campaign Partner records associated with this Campaign.</inlineHelpText>
    <label>Total Intakes Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>