unpackaged/main/default/objects/Campaign__c/fields/Total_Intakes_Sent__c.field-meta.xml
<CustomField>
    <fullName>Total_Intakes_Sent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>DLRS Rollup of all Intakes Sent fields on Campaign Partner records associated with this Campaign.</description>
    <inlineHelpText>DLRS Rollup of all Intakes Sent fields on Campaign Partner records associated with this Campaign.</inlineHelpText>
    <label>Total Intakes Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>