unpackaged/main/default/objects/Campaign__c/listViews/Active_Campaigns.listView-meta.xml
<ListView>
    <fullName>Active_Campaigns</fullName>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Total_Intakes__c</columns>
    <columns>Total_Intakes_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Campaigns</label>
</ListView>