unpackaged/main/default/objects/Campaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Total_Intakes__c</columns>
    <columns>Total_Intakes_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>